--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,14 +16,16 @@ add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-fcheck=all>")
 add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-std=legacy>")
 add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-fno-automatic>")
 add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-Wall>")
-add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-Wextra>")
+#add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-Wextra>")
 #add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-Wno-unused-variable>")
 #add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-Wno-conversion>")
-#add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-Wno-unused-dummy-argument>")
+add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-Wno-unused-dummy-argument>")
 add_compile_options("$<$<Fortran_COMPILER_ID:Intel>:-noauto>")
 add_compile_options("$<$<Fortran_COMPILER_ID:Intel>:-traceback>")
+add_compile_options("$<$<Fortran_COMPILER_ID:Intel>:-warn all>")
 add_compile_options("$<$<Fortran_COMPILER_ID:IntelLLVM>:-noauto>")
 add_compile_options("$<$<Fortran_COMPILER_ID:IntelLLVM>:-traceback>")
+add_compile_options("$<$<Fortran_COMPILER_ID:IntelLLVM>:-warn all>")
 add_compile_options("$<$<Fortran_COMPILER_ID:NVHPC>:-Msave>")
 add_compile_options("$<$<Fortran_COMPILER_ID:PGI>:-Msave>")
 add_compile_options("$<$<Fortran_COMPILER_ID:XL>:-qsave>")
