--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-fcheck=all>")
 add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-std=legacy>")
 add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-fno-automatic>")
 add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-Wall>")
+add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-pedantic>")
 #add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-Wextra>")
 #add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-Wno-unused-variable>")
 #add_compile_options("$<$<Fortran_COMPILER_ID:GNU>:-Wno-conversion>")
