Implement the showering options according to the Section 6 of the manual (#85)
Co-authored-by: Andrii Verbytskyi <andriish@pcatlas18.mpp.mpg.de>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -60,14 +60,14 @@ endmacro()
 
 
 
-macro(sctestlhe NN MM)
+macro(sctestlhe NN MM df pr)
   add_test(NAME SUPERCHIC_${NN}_${MM} COMMAND sh -c "${PROJECT_BINARY_DIR}/bin/superchic < ${CMAKE_CURRENT_BINARY_DIR}/input.DAT_${MM}" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN})
   if(SUPERCHIC_DOWNLOAD_PDFS)
     set_tests_properties( SUPERCHIC_${NN}_${MM} PROPERTIES TIMEOUT 1000 ENVIRONMENT "${STANDARDENVIRONMENT}" DEPENDS "UNZIPPDFS;INIT_${NN}")
   else()
     set_tests_properties( SUPERCHIC_${NN}_${MM} PROPERTIES TIMEOUT 1000 ENVIRONMENT "${STANDARDENVIRONMENT}" DEPENDS "INIT_${NN}")  
   endif()
-  add_test(NAME SHOWER_${NN}_${MM} COMMAND shower ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/evrecs/evrectest${MM}.dat ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/evrecs/showered${MM}.hepmc)
+  add_test(NAME SHOWER_${NN}_${MM} COMMAND shower ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/evrecs/evrectest${MM}.dat ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/evrecs/showered${MM}.hepmc ${df} ${pr})
   set_tests_properties( SHOWER_${NN}_${MM} PROPERTIES DEPENDS "shower;SUPERCHIC_${NN}_${MM}")
   add_test(NAME VALIDATE_${NN}_${MM} COMMAND validator ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/evrecs/showered${MM}.hepmc)
   set_tests_properties( VALIDATE_${NN}_${MM} PROPERTIES DEPENDS "validator;SHOWER_${NN}_${MM}")
@@ -111,14 +111,14 @@ endforeach()
 inittest(LHC13ppunw)
 foreach ( process ${procs} )
 foreach ( diff ${diffs_el} )
-sctestlhe(LHC13ppunw LHC13ppunw_${process}_${diff}_lhe)
+sctestlhe(LHC13ppunw LHC13ppunw_${process}_${diff}_lhe ${diff} ${process})
 sctesthepmc(LHC13ppunw LHC13ppunw_${process}_${diff}_hepmc)
 # FIXME sctesthepmc(LHC13ppunw LHC13ppunw_${process}_${diff}_hepevt)
 endforeach()
 endforeach()
 foreach ( process ${procs_dd} )
 foreach ( diff ${diffs_dd} )
-sctestlhe(LHC13ppunw LHC13ppunw_${process}_${diff}_lhe)
+sctestlhe(LHC13ppunw LHC13ppunw_${process}_${diff}_lhe ${diff} ${process})
 endforeach()
 endforeach()
 
