Eliminate more compiler warnings and compile with -fimplicit-none (#90)
* Eliminate more compiler warnings

* Add the flags to makefile

* Mute real comparison warnings

* Fix the typo

---------

Co-authored-by: Andrii Verbytskyi <andriish@pcatlas18.mpp.mpg.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,10 @@ add_compile_options("$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fcheck=all>")
 add_compile_options("$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-std=legacy>")
 add_compile_options("$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fno-automatic>")
 add_compile_options("$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-Wall>")
+add_compile_options("$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-Wextra>")
+add_compile_options("$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fimplicit-none>")
 add_compile_options("$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-Wno-unused-dummy-argument>")
+add_compile_options("$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-Wno-compare-reals>")
 add_compile_options("$<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-noauto>")
 add_compile_options("$<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-traceback>")
 add_compile_options("$<$<COMPILE_LANG_AND_ID:Fortran,IntelLLVM>:-noauto>")
