--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,8 +56,8 @@ jobs:
       run : |
          export SUPERCHIC_DATA_PATH=$(pwd)/share/SuperChic
          mkdir -p obj lib
-         gmake
-         gmake init
+         gmake -f makefile.make
+         gmake -f makefile.make init
          ls -lah 
          ls -lah bin
          mkdir RUN
@@ -116,7 +116,7 @@ jobs:
          gsed -i 's/gfortran/gfortran-13/g' makefile
          gsed -i '4s/.*/APFELLIB=\`apfel-config --libdir\`/' makefile
          cat makefile
-         make -j 2
+         make -f makefile.make -j 2
          cmake -S . -B BUILD -DCMAKE_INSTALL_PREFIX=$(pwd)/INSTALL -DCMAKE_Fortran_FLAGS=-O2 -DSUPERCHIC_ENABLE_TESTS=OFF -DCMAKE_Fortran_COMPILER=gfortran-13
          cmake --build BUILD -j 2 --verbose
          cmake --install BUILD 
