--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -103,6 +103,10 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_LHC13ppunw ${CMAKE_CURRENT_
 foreach ( diff ${diffs} )
 foreach ( process ${procs} )
 foreach ( format ${fmts} )
+set (gencuts ".false.")
+if (${process} EQUAL 3  OR  ${process} EQUAL 7)
+set (gencuts ".true.")
+endif()
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_LHC13ppunw ${CMAKE_CURRENT_BINARY_DIR}/input.DAT_LHC13ppunw_${process}_${diff}_${format})
 endforeach()
 endforeach()
