--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -90,7 +90,7 @@ jobs:
           fetch-depth: 3 
     - name: Run
       run : |
-         cmake -S . -B BUILD -DCMAKE_INSTALL_PREFIX=$(pwd)/INSTALL -DCMAKE_Fortran_FLAGS=-O2 -DSUPERCHIC_ENABLE_TESTS=ON -DSUPERCHIC_ENABLE_DOCS=ON
+         cmake -S . -B BUILD -DCMAKE_INSTALL_PREFIX=$(pwd)/INSTALL -DCMAKE_Fortran_FLAGS=-O2 -DSUPERCHIC_ENABLE_TESTS=ON -DSUPERCHIC_ENABLE_DOCS=ON -DSUPERCHIC_DOWNLOAD_PDFS=ON
          cmake --build BUILD -j 2
          cmake --install BUILD 
          ls -lah 
@@ -117,7 +117,7 @@ jobs:
          gsed -i '4s/.*/APFELLIB=\`apfel-config --libdir\`/' makefile.make
          cat makefile.make
          make -f makefile.make -j 2
-         cmake -S . -B BUILD -DCMAKE_INSTALL_PREFIX=$(pwd)/INSTALL -DCMAKE_Fortran_FLAGS=-O2 -DSUPERCHIC_ENABLE_TESTS=OFF -DCMAKE_Fortran_COMPILER=gfortran-13
+         cmake -S . -B BUILD -DCMAKE_INSTALL_PREFIX=$(pwd)/INSTALL -DCMAKE_Fortran_FLAGS=-O2 -DSUPERCHIC_ENABLE_TESTS=OFF -DCMAKE_Fortran_COMPILER=gfortran-13 -DSUPERCHIC_DOWNLOAD_PDFS=ON
          cmake --build BUILD -j 2 --verbose
          cmake --install BUILD 
          ls -lah 
