Temporarily use HepMC2 for Pythia

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,10 +7,12 @@ target_link_libraries(validator PRIVATE ${HEPMC3_LIBRARIES})
 target_include_directories(validator PRIVATE ${HEPMC3_INCLUDE_DIR})
 target_compile_features(validator PRIVATE cxx_std_11)
 
+
+find_package(HepMC2)
 find_package(Pythia8 8.3 REQUIRED)
 add_executable(shower ${CMAKE_CURRENT_SOURCE_DIR}/shower.cxx)
-target_link_libraries(shower PRIVATE ${HEPMC3_LIBRARIES} Pythia8::Pythia8 )
-target_include_directories(shower PRIVATE ${HEPMC3_INCLUDE_DIRS})
+target_link_libraries(shower PRIVATE ${HEPMC3_LIBRARIES} ${HEPMC2_LIBRARIES} Pythia8::Pythia8 )
+target_include_directories(shower PRIVATE ${HEPMC3_INCLUDE_DIRS} ${HEPMC2_INCLUDE_DIRS})
 target_compile_features(shower PRIVATE cxx_std_11)
 message(STATUS "SuperChic test: PYTHIA8_VERSION=${PYTHIA8_VERSION} PYTHIA8_LIBRARIES=${PYTHIA8_LIBRARIES} PYTHIA8_INCLUDE_DIRS=${PYTHIA8_INCLUDE_DIRS}")
 
