--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,7 +11,7 @@ target_compile_features(validator PRIVATE cxx_std_11)
 find_package(HepMC2)
 find_package(Pythia8 8.3 REQUIRED)
 add_executable(shower ${CMAKE_CURRENT_SOURCE_DIR}/shower.cxx)
-target_link_libraries(shower PRIVATE HepMC2::HepMC2fio HepMC2::HepMC2 Pythia8::Pythia8 )
+target_link_libraries(shower PRIVATE HepMC2::HepMC2 Pythia8::Pythia8 )
 target_compile_features(shower PRIVATE cxx_std_11)
 target_compile_definitions(shower PRIVATE -DHEPMC2=1)
 message(STATUS "SuperChic test: PYTHIA8_VERSION=${PYTHIA8_VERSION} PYTHIA8_LIBRARIES=${PYTHIA8_LIBRARIES} PYTHIA8_INCLUDE_DIRS=${PYTHIA8_INCLUDE_DIRS}")
