--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Install 
       run: |
-           dnf install 'dnf-command(copr)'
+           dnf -y install 'dnf-command(copr)'
            dnf -y copr enable averbyts/HEPrpms 
            dnf -y install  gcc gcc-c++ gcc-gfortran make wget which cmake cmake-data cmake-filesystem lhapdf lhapdf-devel  apfel apfel-devel pythia8 pythia8-devel HepMC3-devel HepMC-devel
     - name: Compile
