--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,11 @@
+option(SUPERCHIC_ENABLE_ALL_TESTS    "Enables building of all tests." OFF)
+option(SUPERCHIC_DOWNLOAD_PDFS       "Enables downloading of PDFs for tests." OFF)
+option(SUPERCHIC_ENABLE_RIVET        "Enables ctesting with Rivet." OFF)
+
+message(STATUS "SuperChic test: SUPERCHIC_ENABLE_ALL_TESTS=${SUPERCHIC_ENABLE_ALL_TESTS}" )
+message(STATUS "SuperChic test: SUPERCHIC_DOWNLOAD_PDFS=${SUPERCHIC_DOWNLOAD_PDFS}" )
+message(STATUS "SuperChic test: SUPERCHIC_ENABLE_RIVET=${SUPERCHIC_ENABLE_RIVET}" )
+
 
 enable_language(CXX)
 find_package(HepMC3 3.1.0 REQUIRED)
@@ -18,6 +26,20 @@ message(STATUS "SuperChic test: PYTHIA8_VERSION=${PYTHIA8_VERSION} PYTHIA8_LIBRA
 
 
 set(STANDARDENVIRONMENT "SUPERCHIC_DATA_PATH=${PROJECT_SOURCE_DIR}/share/SuperChic;PYTHIA8_XMLDOC_DIR=${PYTHIA8_XMLDOC_DIR}")
+
+if (SUPERCHIC_ENABLE_RIVET)
+find_package (Python 3 COMPONENTS  Development Interpreter)
+find_package(Rivet REQUIRED)
+find_package(YODA REQUIRED)
+message(STATUS "SuperChic: RIVET_VERSION=${RIVET_VERSION} RIVET_FOUND=${RIVET_FOUND}  RIVET_LIBRARIES=${RIVET_LIBRARIES} \
+  RIVET_INCLUDE_DIRS=${RIVET_INCLUDE_DIRS} RIVET_DATA_PATH=${RIVET_DATA_PATH} RIVET_ANALYSIS_PATH=${RIVET_ANALYSIS_PATH} \
+  Rivet_HEPMC2_FOUND=${Rivet_HEPMC2_FOUND}  Rivet_HEPMC3_FOUND=${Rivet_HEPMC3_FOUND} \
+  RIVET_CONFIG_LIBS_STRING=${RIVET_CONFIG_LIBS_STRING}  RIVET_CONFIG_LIBS=${RIVET_CONFIG_LIBS}  RIVET_CONFIG_LIB_DIRS=${RIVET_CONFIG_LIB_DIRS} \
+  RIVET_CONFIG_CPPFLAGS_STRING=${RIVET_CONFIG_CPPFLAGS_STRING}  RIVET_CONFIG_CPPFLAGS_DIRS=${RIVET_CONFIG_CPPFLAGS_DIRS} ")
+message(STATUS "SuperChic: YODA_VERSION=${YODA_VERSION} YODA_LIBRARIES=${YODA_LIBRARIES} YODA_INCLUDE_DIRS=${YODA_INCLUDE_DIRS} YODA_CONFIG_PYTHONPATH_STRING=${YODA_CONFIG_PYTHONPATH_STRING}")
+  list(APPEND STANDARDENVIRONMENT "RIVET_ANALYSIS_PATH=${RIVET_ANALYSIS_PATH};RIVET_DATA_PATH=${RIVET_DATA_PATH}")
+  list(APPEND STANDARDENVIRONMENT "PYTHONPATH=${YODA_CONFIG_PYTHONPATH_STRING}:${RIVET_CONFIG_PYTHONPATH_STRING}:$ENV{PYTHONPATH}")
+endif()
 
 if (SUPERCHIC_DOWNLOAD_PDFS)
   include(FetchContent)
@@ -73,15 +95,45 @@ macro(sctestlhe NN MM df pr)
 
 endmacro()
 
+macro(sctestrivet NN  process DD)
+if (SUPERCHIC_ENABLE_RIVET)
+string(REPLACE " " ";" D ${DD})
+#FCC350eeunw_${process}_${diff}_lhe ${diff}_ee ${process}
+  set(fo "")
+  foreach( diff ${D})
+    set(MM ${NN}_${process}_${diff}_lhe)
+    set(out ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/evrecs/showered${MM}.yoda)
+    add_test(NAME RIVET_LHEF_${NN}_${MM} COMMAND ${Python_EXECUTABLE} ${RIVET_EXE} --ignore-beams -a MC_XS ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/evrecs/showered${MM}.hepmc -o  ${out})
+    set_tests_properties( RIVET_LHEF_${NN}_${MM} PROPERTIES ENVIRONMENT "${STANDARDENVIRONMENT}" TIMEOUT 500 DEPENDS "SUPERCHIC_${NN}_${MM}")
+    list(APPEND fo ${out})
+  endforeach()
+  add_test(NAME PLOT_LHEF_${NN}_${process} COMMAND rivet-mkhtml ${fo} -o ${CMAKE_CURRENT_BINARY_DIR}/RUN_${NN}/rivet/${process}  )
+  foreach( diff ${D})
+    set(MM ${NN}_${process}_${diff}_lhe)
+    set_tests_properties( PLOT_LHEF_${NN}_${process} PROPERTIES ENVIRONMENT "${STANDARDENVIRONMENT}" TIMEOUT 500 DEPENDS "RIVET_LHEF_${NN}_${MM}")
+  endforeach()
+  endif()
+endmacro()
 
-set(diffs  el sd dd)
-set(diffs_dd   sd dd)
-set(diffs_el   el)
-#set(diffs  el  dd) 
-#sd does not work so far
+
+##NUMBER OF EVENTS
+if (NOT NEV)
+  set(NEV 10)
+endif()
+##
+set(PP TRUE)
+set(EE FALSE)
+
+
 set(fmts  hepevt lhe hepmc)
+if (PP)
+
+foreach( i RANGE 1 100)
+set( proc${i} "")
+endforeach()
+
 if (SUPERCHIC_ENABLE_ALL_TESTS)
-set(procs  1 2 3 4 5 6 7 8 9  
+foreach( i IN ITEMS 1 2 3 4 5 6 7 8 9  
            10 11 12 13 14 15 16 17 18 19 
            20 21 22 23 24 25 26 27 28 29
            30 31 32 33 34 35 36 37 38 39
@@ -91,88 +143,80 @@ set(procs  1 2 3 4 5 6 7 8 9
            70 71 72 73 74 75 76 77 78 79
                  82 83 84 
            )
-set(procs_dd 54 55 56 57 58
+    list(APPEND proc${i} "el")
+endforeach()           
+foreach( i IN ITEMS 54 55 56 57 58
              68 )
+    list(APPEND proc${i} "sd")
+    list(APPEND proc${i} "dd")
+endforeach()  
 else()
-set(procs 56 )
-set(procs_dd 56 )
+  set(proc68 "el;sd;dd")
 endif()
+
+
 
 set(process 100)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_LHC13ppunw ${CMAKE_CURRENT_BINARY_DIR}/input.DAT_LHC13ppunw) # for init
-foreach ( diff ${diffs} )
-foreach ( process ${procs} )
-foreach ( format ${fmts} )
-set (gencuts ".false.")
-if (${process} EQUAL 3  OR  ${process} EQUAL 7 OR  ${process} EQUAL 8 OR  ${process} EQUAL 14 OR  ${process} EQUAL 15 OR  ${process} EQUAL 16 OR  ${process} EQUAL 70 OR  ${process} EQUAL 71 OR  ${process} EQUAL 72)
-set (gencuts ".true.")
-endif()
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_LHC13ppunw ${CMAKE_CURRENT_BINARY_DIR}/input.DAT_LHC13ppunw_${process}_${diff}_${format})
-endforeach()
-endforeach()
-endforeach()
-
-
 inittest(LHC13ppunw)
-foreach ( process ${procs} )
-foreach ( diff ${diffs_el} )
-sctestlhe(LHC13ppunw LHC13ppunw_${process}_${diff}_lhe ${diff}_pp ${process})
-sctesthepmc(LHC13ppunw LHC13ppunw_${process}_${diff}_hepmc)
-# FIXME sctesthepmc(LHC13ppunw LHC13ppunw_${process}_${diff}_hepevt)
+foreach( process RANGE 1 100)
+  LIST(LENGTH proc${process} LISTCOUNT)
+  if (${LISTCOUNT}  GREATER 0)
+  foreach(diff ${proc${process}}) 
+    foreach ( format ${fmts} )
+      set (gencuts ".false.")
+      if (${process} EQUAL 3  OR  ${process} EQUAL 7 OR  ${process} EQUAL 8 OR  ${process} EQUAL 14 OR  ${process} EQUAL 15 OR  ${process} EQUAL 16 OR  ${process} EQUAL 70 OR  ${process} EQUAL 71 OR  ${process} EQUAL 72)
+        set (gencuts ".true.")
+      endif()
+      configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_LHC13ppunw ${CMAKE_CURRENT_BINARY_DIR}/input.DAT_LHC13ppunw_${process}_${diff}_${format})
+    endforeach()
+    sctestlhe(LHC13ppunw LHC13ppunw_${process}_${diff}_lhe ${diff}_pp ${process})
+    sctesthepmc(LHC13ppunw LHC13ppunw_${process}_${diff}_hepmc)
+  endforeach()
+  list(JOIN proc${process} " " X)
+  sctestrivet(LHC13ppunw ${process} ${X})
+  endif()
 endforeach()
-endforeach()
-foreach ( process ${procs_dd} )
-foreach ( diff ${diffs_dd} )
-sctestlhe(LHC13ppunw LHC13ppunw_${process}_${diff}_lhe ${diff}_pp ${process})
-endforeach()
-endforeach()
+endif()
 
-
-unset(procs)
-unset(procs_dd)
-
+if (EE)
+foreach( i RANGE 1 100)
+set( proc${i} "")
+endforeach()
 if (SUPERCHIC_ENABLE_ALL_TESTS)
-set(procs  
+foreach( i IN  ITEMS
                           55 56 57 58 59
            60 61                   68 69
            70 71 72 73 74 75 76 
                  82 83 84 
            )
-set(procs_dd  )
+    list(APPEND proc${i} "el")
+endforeach()                
 else()
-set(procs 56 )
-set(procs_dd  )
+set(proc68 "el")
 endif()
 
 
 set(process 100)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_FCC350eeunw ${CMAKE_CURRENT_BINARY_DIR}/input.DAT_FCC350eeunw) # for init
-foreach ( diff ${diffs} )
-foreach ( process ${procs} )
-foreach ( format ${fmts} )
-set (gencuts ".false.")
-if (${process} EQUAL 3  OR  ${process} EQUAL 7 OR  ${process} EQUAL 8 OR  ${process} EQUAL 14 OR  ${process} EQUAL 15 OR  ${process} EQUAL 16 OR  ${process} EQUAL 70 OR  ${process} EQUAL 71 OR  ${process} EQUAL 72)
-set (gencuts ".true.")
-endif()
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_FCC350eeunw ${CMAKE_CURRENT_BINARY_DIR}/input.DAT_FCC350eeunw_${process}_${diff}_${format})
-endforeach()
-endforeach()
-endforeach()
-
-
 inittest(FCC350eeunw)
-foreach ( process ${procs} )
-foreach ( diff ${diffs_el} )
-sctestlhe(FCC350eeunw FCC350eeunw_${process}_${diff}_lhe ${diff}_ee ${process})
-sctesthepmc(FCC350eeunw FCC350eeunw_${process}_${diff}_hepmc)
-# FIXME sctesthepmc(FCC350eeunw FCC350eeunw_${process}_${diff}_hepevt)
+foreach( process RANGE 1 100)
+  LIST(LENGTH proc${process} LISTCOUNT)
+  if (${LISTCOUNT}  GREATER 0)
+  foreach(diff ${proc${process}}) 
+    foreach ( format ${fmts} )
+      set (gencuts ".false.")
+      if (${process} EQUAL 3  OR  ${process} EQUAL 7 OR  ${process} EQUAL 8 OR  ${process} EQUAL 14 OR  ${process} EQUAL 15 OR  ${process} EQUAL 16 OR  ${process} EQUAL 70 OR  ${process} EQUAL 71 OR  ${process} EQUAL 72)
+        set (gencuts ".true.")
+      endif()
+      configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input.DAT_FCC350eeunw ${CMAKE_CURRENT_BINARY_DIR}/input.DAT_FCC350eeunw_${process}_${diff}_${format})
+    endforeach()
+    sctestlhe(FCC350eeunw FCC350eeunw_${process}_${diff}_lhe ${diff}_ee ${process})
+    sctesthepmc(FCC350eeunw FCC350eeunw_${process}_${diff}_hepmc)
+  endforeach()
+ # sctestrivet(FCC350eeunw ${process} ${proc${process}})
+   list(JOIN proc${process} " " X)
+  sctestrivet(FCC350eeunw ${process} ${X})
+  endif()
 endforeach()
-endforeach()
-foreach ( process ${procs_dd} )
-foreach ( diff ${diffs_dd} )
-sctestlhe(FCC350eeunw FCC350eeunw_${process}_${diff}_lhe ${diff}_ee ${process})
-endforeach()
-endforeach()
-
-
-
+endif()
